Tue Jun 14 21:40:42 2016  Kazuki Yamaguchi  <k@rhe.jp>

	* ext/openssl/ossl_ocsp.c (ossl_ocspbres_to_der, ossl_ocspcid_to_der):
	  Implement #to_der methods for OCSP::BasicResponse and
	  OCSP::CertificateId.

	  (ossl_ocspreq_initialize, ossl_ocspres_initialize): Use GetOCSP*()
	  instead of raw DATA_PTR().

	  (ossl_ocspbres_initialize, ossl_ocspcid_initialize): Allow
	  initializing from DER string.

	  (Init_ossl_ocsp): Define new #to_der methods.

	* test/openssl/test_ocsp.rb: Test these changes. Also add missing tests
	  for OCSP::{Response,Request}#to_der.

Tue Jun 14 21:35:00 2016  Kazuki Yamaguchi  <k@rhe.jp>

	* ext/openssl/openssl_missing.h (DH_set0_pqg, RSA_set0_key):
	  DH_set0_pqg() allows 'q' to be NULL. Fix a typo in RSA_set0_key().
	  Fixes r55285.  [ruby-core:75225] [Feature #12324]

Mon Jun 14 10:19:00 2016  Kenta Murata  <mrkn@mrkn.jp>

	* NEWS: describe Integer#digits.

Mon Jun 13 21:09:40 2016  NARUSE, Yui  <naruse@ruby-lang.org>

	* thread.c (debug_deadlock_check): show thread lock dependency and
	  backtrace [Feature #8214] [ruby-dev:47217]

	* thread.c (thread_status_name): show "sleep_forever" instead of
	  "sleep" if called from inspect.

Mon Jun 13 20:50:07 2016  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* parse.y (reg_named_capture_assign_iter): remove named capture
	  conflict warnings.  it is just annoying rather than useful.
	  [ruby-core:75416] [Bug #12359]

Mon Jun 13 20:04:00 2016  Kenta Murata  <mrkn@mrkn.jp>

	* numeric.c (rb_int_digits, rb_fix_digits, rb_int_digits_bigbase):
	  Add Integer#digits to extract columns in place-value notation
	  [Feature #12447] [ruby-core:75799]

	* test/ruby/test_integer.rb: Add tests for the above change.

	* test/ruby/test_bignum.rb: ditto.

Mon Jun 13 20:34:53 2016  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* include/ruby/ruby.h (RUBY_INTEGER_UNIFICATION): macro to tell if
	  Integer is integrated.  [ruby-core:75718][Bug #12427]

	* include/ruby/backward.h, internal.h (rb_cFixnum, rb_cBignum):